v0.0.9/_sources/plugins/authorization_profile_module.rst.txt
.. Document meta

:orphan:

.. Anchors

.. _ansible_collections.cisco.ise.authorization_profile_module:

.. Anchors: short name for ansible.builtin

.. Anchors: aliases



.. Title

cisco.ise.authorization_profile -- Resource module for Authorization Profile
++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

.. Collection note

.. note::
    This plugin is part of the `cisco.ise collection <https://galaxy.ansible.com/cisco/ise>`_ (version 0.0.9).

    To install it use: :code:`ansible-galaxy collection install cisco.ise`.

    To use it in a playbook, specify: :code:`cisco.ise.authorization_profile`.

.. version_added

.. versionadded:: 1.0.0 of cisco.ise

.. contents::
   :local:
   :depth: 1

.. Deprecated


Synopsis
--------

.. Description

- Manage operations create, update and delete of the resource Authorization Profile.

.. note::
    This module has a corresponding :ref:`action plugin <action_plugins>`.

.. Aliases


.. Requirements

Requirements
------------
The below requirements are needed on the host that executes this module.

- ciscoisesdk


.. Options

Parameters
----------

.. raw:: html

    <table  border=0 cellpadding=0 class="documentation-table">
        <tr>
            <th colspan="3">Parameter</th>
            <th>Choices/<font color="blue">Defaults</font></th>
                        <th width="100%">Comments</th>
        </tr>
                    <tr>
                                                                <td colspan="3">
                    <div class="ansibleOptionAnchor" id="parameter-accessType"></div>
                    <b>accessType</b>
                    <a class="ansibleOptionLink" href="#parameter-accessType" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Authorization Profile&#x27;s accessType.</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="3">
                    <div class="ansibleOptionAnchor" id="parameter-acl"></div>
                    <b>acl</b>
                    <a class="ansibleOptionLink" href="#parameter-acl" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Authorization Profile&#x27;s acl.</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="3">
                    <div class="ansibleOptionAnchor" id="parameter-advancedAttributes"></div>
                    <b>advancedAttributes</b>
                    <a class="ansibleOptionLink" href="#parameter-advancedAttributes" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">list</span>
                         / <span style="color: purple">elements=string</span>                                            </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Authorization Profile&#x27;s advancedAttributes.</div>
                                                        </td>
            </tr>
                                        <tr>
                                                    <td class="elbow-placeholder"></td>
                                                <td colspan="2">
                    <div class="ansibleOptionAnchor" id="parameter-advancedAttributes/leftHandSideDictionaryAttribue"></div>
                    <b>leftHandSideDictionaryAttribue</b>
                    <a class="ansibleOptionLink" href="#parameter-advancedAttributes/leftHandSideDictionaryAttribue" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">dictionary</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Authorization Profile&#x27;s leftHandSideDictionaryAttribue.</div>
                                                        </td>
            </tr>
                                        <tr>
                                                    <td class="elbow-placeholder"></td>
                                    <td class="elbow-placeholder"></td>
                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-advancedAttributes/leftHandSideDictionaryAttribue/AdvancedAttributeValueType"></div>
                    <b>AdvancedAttributeValueType</b>
                    <a class="ansibleOptionLink" href="#parameter-advancedAttributes/leftHandSideDictionaryAttribue/AdvancedAttributeValueType" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Authorization Profile&#x27;s AdvancedAttributeValueType.</div>
                                                        </td>
            </tr>
                                <tr>
                                                    <td class="elbow-placeholder"></td>
                                    <td class="elbow-placeholder"></td>
                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-advancedAttributes/leftHandSideDictionaryAttribue/attributeName"></div>
                    <b>attributeName</b>
                    <a class="ansibleOptionLink" href="#parameter-advancedAttributes/leftHandSideDictionaryAttribue/attributeName" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Authorization Profile&#x27;s attributeName.</div>
                                                        </td>
            </tr>
                                <tr>
                                                    <td class="elbow-placeholder"></td>
                                    <td class="elbow-placeholder"></td>
                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-advancedAttributes/leftHandSideDictionaryAttribue/dictionaryName"></div>
                    <b>dictionaryName</b>
                    <a class="ansibleOptionLink" href="#parameter-advancedAttributes/leftHandSideDictionaryAttribue/dictionaryName" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Authorization Profile&#x27;s dictionaryName.</div>
                                                        </td>
            </tr>
                    
                                <tr>
                                                    <td class="elbow-placeholder"></td>
                                                <td colspan="2">
                    <div class="ansibleOptionAnchor" id="parameter-advancedAttributes/rightHandSideAttribueValue"></div>
                    <b>rightHandSideAttribueValue</b>
                    <a class="ansibleOptionLink" href="#parameter-advancedAttributes/rightHandSideAttribueValue" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">dictionary</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Authorization Profile&#x27;s rightHandSideAttribueValue.</div>
                                                        </td>
            </tr>
                                        <tr>
                                                    <td class="elbow-placeholder"></td>
                                    <td class="elbow-placeholder"></td>
                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-advancedAttributes/rightHandSideAttribueValue/AdvancedAttributeValueType"></div>
                    <b>AdvancedAttributeValueType</b>
                    <a class="ansibleOptionLink" href="#parameter-advancedAttributes/rightHandSideAttribueValue/AdvancedAttributeValueType" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Authorization Profile&#x27;s AdvancedAttributeValueType.</div>
                                                        </td>
            </tr>
                                <tr>
                                                    <td class="elbow-placeholder"></td>
                                    <td class="elbow-placeholder"></td>
                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-advancedAttributes/rightHandSideAttribueValue/value"></div>
                    <b>value</b>
                    <a class="ansibleOptionLink" href="#parameter-advancedAttributes/rightHandSideAttribueValue/value" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Authorization Profile&#x27;s value.</div>
                                                        </td>
            </tr>
                    
                    
                                <tr>
                                                                <td colspan="3">
                    <div class="ansibleOptionAnchor" id="parameter-airespaceACL"></div>
                    <b>airespaceACL</b>
                    <a class="ansibleOptionLink" href="#parameter-airespaceACL" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Authorization Profile&#x27;s airespaceACL.</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="3">
                    <div class="ansibleOptionAnchor" id="parameter-airespaceIPv6ACL"></div>
                    <b>airespaceIPv6ACL</b>
                    <a class="ansibleOptionLink" href="#parameter-airespaceIPv6ACL" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Authorization Profile&#x27;s airespaceIPv6ACL.</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="3">
                    <div class="ansibleOptionAnchor" id="parameter-asaVpn"></div>
                    <b>asaVpn</b>
                    <a class="ansibleOptionLink" href="#parameter-asaVpn" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Authorization Profile&#x27;s asaVpn.</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="3">
                    <div class="ansibleOptionAnchor" id="parameter-authzProfileType"></div>
                    <b>authzProfileType</b>
                    <a class="ansibleOptionLink" href="#parameter-authzProfileType" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Authorization Profile&#x27;s authzProfileType.</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="3">
                    <div class="ansibleOptionAnchor" id="parameter-autoSmartPort"></div>
                    <b>autoSmartPort</b>
                    <a class="ansibleOptionLink" href="#parameter-autoSmartPort" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Authorization Profile&#x27;s autoSmartPort.</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="3">
                    <div class="ansibleOptionAnchor" id="parameter-avcProfile"></div>
                    <b>avcProfile</b>
                    <a class="ansibleOptionLink" href="#parameter-avcProfile" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Authorization Profile&#x27;s avcProfile.</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="3">
                    <div class="ansibleOptionAnchor" id="parameter-daclName"></div>
                    <b>daclName</b>
                    <a class="ansibleOptionLink" href="#parameter-daclName" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Authorization Profile&#x27;s daclName.</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="3">
                    <div class="ansibleOptionAnchor" id="parameter-description"></div>
                    <b>description</b>
                    <a class="ansibleOptionLink" href="#parameter-description" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Authorization Profile&#x27;s description.</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="3">
                    <div class="ansibleOptionAnchor" id="parameter-easywiredSessionCandidate"></div>
                    <b>easywiredSessionCandidate</b>
                    <a class="ansibleOptionLink" href="#parameter-easywiredSessionCandidate" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">boolean</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                                        <ul style="margin: 0; padding: 0"><b>Choices:</b>
                                                                                                                                                                <li>no</li>
                                                                                                                                                                                                <li>yes</li>
                                                                                    </ul>
                                                                            </td>
                                                                <td>
                                            <div>EasywiredSessionCandidate flag.</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="3">
                    <div class="ansibleOptionAnchor" id="parameter-id"></div>
                    <b>id</b>
                    <a class="ansibleOptionLink" href="#parameter-id" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Authorization Profile&#x27;s id.</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="3">
                    <div class="ansibleOptionAnchor" id="parameter-interfaceTemplate"></div>
                    <b>interfaceTemplate</b>
                    <a class="ansibleOptionLink" href="#parameter-interfaceTemplate" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Authorization Profile&#x27;s interfaceTemplate.</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="3">
                    <div class="ansibleOptionAnchor" id="parameter-ipv6ACLFilter"></div>
                    <b>ipv6ACLFilter</b>
                    <a class="ansibleOptionLink" href="#parameter-ipv6ACLFilter" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Authorization Profile&#x27;s ipv6ACLFilter.</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="3">
                    <div class="ansibleOptionAnchor" id="parameter-ipv6DaclName"></div>
                    <b>ipv6DaclName</b>
                    <a class="ansibleOptionLink" href="#parameter-ipv6DaclName" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Authorization Profile&#x27;s ipv6DaclName.</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="3">
                    <div class="ansibleOptionAnchor" id="parameter-macSecPolicy"></div>
                    <b>macSecPolicy</b>
                    <a class="ansibleOptionLink" href="#parameter-macSecPolicy" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Authorization Profile&#x27;s macSecPolicy.</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="3">
                    <div class="ansibleOptionAnchor" id="parameter-name"></div>
                    <b>name</b>
                    <a class="ansibleOptionLink" href="#parameter-name" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Authorization Profile&#x27;s name.</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="3">
                    <div class="ansibleOptionAnchor" id="parameter-neat"></div>
                    <b>neat</b>
                    <a class="ansibleOptionLink" href="#parameter-neat" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">boolean</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                                        <ul style="margin: 0; padding: 0"><b>Choices:</b>
                                                                                                                                                                <li>no</li>
                                                                                                                                                                                                <li>yes</li>
                                                                                    </ul>
                                                                            </td>
                                                                <td>
                                            <div>Neat flag.</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="3">
                    <div class="ansibleOptionAnchor" id="parameter-profileName"></div>
                    <b>profileName</b>
                    <a class="ansibleOptionLink" href="#parameter-profileName" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Authorization Profile&#x27;s profileName.</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="3">
                    <div class="ansibleOptionAnchor" id="parameter-reauth"></div>
                    <b>reauth</b>
                    <a class="ansibleOptionLink" href="#parameter-reauth" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">dictionary</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Authorization Profile&#x27;s reauth.</div>
                                                        </td>
            </tr>
                                        <tr>
                                                    <td class="elbow-placeholder"></td>
                                                <td colspan="2">
                    <div class="ansibleOptionAnchor" id="parameter-reauth/connectivity"></div>
                    <b>connectivity</b>
                    <a class="ansibleOptionLink" href="#parameter-reauth/connectivity" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Authorization Profile&#x27;s connectivity.</div>
                                                        </td>
            </tr>
                                <tr>
                                                    <td class="elbow-placeholder"></td>
                                                <td colspan="2">
                    <div class="ansibleOptionAnchor" id="parameter-reauth/timer"></div>
                    <b>timer</b>
                    <a class="ansibleOptionLink" href="#parameter-reauth/timer" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">integer</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Authorization Profile&#x27;s timer.</div>
                                                        </td>
            </tr>
                    
                                <tr>
                                                                <td colspan="3">
                    <div class="ansibleOptionAnchor" id="parameter-serviceTemplate"></div>
                    <b>serviceTemplate</b>
                    <a class="ansibleOptionLink" href="#parameter-serviceTemplate" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">boolean</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                                        <ul style="margin: 0; padding: 0"><b>Choices:</b>
                                                                                                                                                                <li>no</li>
                                                                                                                                                                                                <li>yes</li>
                                                                                    </ul>
                                                                            </td>
                                                                <td>
                                            <div>ServiceTemplate flag.</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="3">
                    <div class="ansibleOptionAnchor" id="parameter-trackMovement"></div>
                    <b>trackMovement</b>
                    <a class="ansibleOptionLink" href="#parameter-trackMovement" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">boolean</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                                        <ul style="margin: 0; padding: 0"><b>Choices:</b>
                                                                                                                                                                <li>no</li>
                                                                                                                                                                                                <li>yes</li>
                                                                                    </ul>
                                                                            </td>
                                                                <td>
                                            <div>TrackMovement flag.</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="3">
                    <div class="ansibleOptionAnchor" id="parameter-vlan"></div>
                    <b>vlan</b>
                    <a class="ansibleOptionLink" href="#parameter-vlan" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">dictionary</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Authorization Profile&#x27;s vlan.</div>
                                                        </td>
            </tr>
                                        <tr>
                                                    <td class="elbow-placeholder"></td>
                                                <td colspan="2">
                    <div class="ansibleOptionAnchor" id="parameter-vlan/nameID"></div>
                    <b>nameID</b>
                    <a class="ansibleOptionLink" href="#parameter-vlan/nameID" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Authorization Profile&#x27;s nameID.</div>
                                                        </td>
            </tr>
                                <tr>
                                                    <td class="elbow-placeholder"></td>
                                                <td colspan="2">
                    <div class="ansibleOptionAnchor" id="parameter-vlan/tagID"></div>
                    <b>tagID</b>
                    <a class="ansibleOptionLink" href="#parameter-vlan/tagID" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">integer</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Authorization Profile&#x27;s tagID.</div>
                                                        </td>
            </tr>
                    
                                <tr>
                                                                <td colspan="3">
                    <div class="ansibleOptionAnchor" id="parameter-voiceDomainPermission"></div>
                    <b>voiceDomainPermission</b>
                    <a class="ansibleOptionLink" href="#parameter-voiceDomainPermission" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">boolean</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                                        <ul style="margin: 0; padding: 0"><b>Choices:</b>
                                                                                                                                                                <li>no</li>
                                                                                                                                                                                                <li>yes</li>
                                                                                    </ul>
                                                                            </td>
                                                                <td>
                                            <div>VoiceDomainPermission flag.</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="3">
                    <div class="ansibleOptionAnchor" id="parameter-webAuth"></div>
                    <b>webAuth</b>
                    <a class="ansibleOptionLink" href="#parameter-webAuth" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">boolean</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                                        <ul style="margin: 0; padding: 0"><b>Choices:</b>
                                                                                                                                                                <li>no</li>
                                                                                                                                                                                                <li>yes</li>
                                                                                    </ul>
                                                                            </td>
                                                                <td>
                                            <div>WebAuth flag.</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="3">
                    <div class="ansibleOptionAnchor" id="parameter-webRedirection"></div>
                    <b>webRedirection</b>
                    <a class="ansibleOptionLink" href="#parameter-webRedirection" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">dictionary</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Authorization Profile&#x27;s webRedirection.</div>
                                                        </td>
            </tr>
                                        <tr>
                                                    <td class="elbow-placeholder"></td>
                                                <td colspan="2">
                    <div class="ansibleOptionAnchor" id="parameter-webRedirection/acl"></div>
                    <b>acl</b>
                    <a class="ansibleOptionLink" href="#parameter-webRedirection/acl" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Authorization Profile&#x27;s acl.</div>
                                                        </td>
            </tr>
                                <tr>
                                                    <td class="elbow-placeholder"></td>
                                                <td colspan="2">
                    <div class="ansibleOptionAnchor" id="parameter-webRedirection/displayCertificatesRenewalMessages"></div>
                    <b>displayCertificatesRenewalMessages</b>
                    <a class="ansibleOptionLink" href="#parameter-webRedirection/displayCertificatesRenewalMessages" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">boolean</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                                        <ul style="margin: 0; padding: 0"><b>Choices:</b>
                                                                                                                                                                <li>no</li>
                                                                                                                                                                                                <li>yes</li>
                                                                                    </ul>
                                                                            </td>
                                                                <td>
                                            <div>DisplayCertificatesRenewalMessages flag.</div>
                                                        </td>
            </tr>
                                <tr>
                                                    <td class="elbow-placeholder"></td>
                                                <td colspan="2">
                    <div class="ansibleOptionAnchor" id="parameter-webRedirection/portalName"></div>
                    <b>portalName</b>
                    <a class="ansibleOptionLink" href="#parameter-webRedirection/portalName" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Authorization Profile&#x27;s portalName.</div>
                                                        </td>
            </tr>
                                <tr>
                                                    <td class="elbow-placeholder"></td>
                                                <td colspan="2">
                    <div class="ansibleOptionAnchor" id="parameter-webRedirection/staticIPHostNameFQDN"></div>
                    <b>staticIPHostNameFQDN</b>
                    <a class="ansibleOptionLink" href="#parameter-webRedirection/staticIPHostNameFQDN" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Authorization Profile&#x27;s staticIPHostNameFQDN.</div>
                                                        </td>
            </tr>
                                <tr>
                                                    <td class="elbow-placeholder"></td>
                                                <td colspan="2">
                    <div class="ansibleOptionAnchor" id="parameter-webRedirection/WebRedirectionType"></div>
                    <b>WebRedirectionType</b>
                    <a class="ansibleOptionLink" href="#parameter-webRedirection/WebRedirectionType" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Authorization Profile&#x27;s WebRedirectionType.</div>
                                                        </td>
            </tr>
                    
                        </table>
    <br/>

.. Notes


.. Seealso

See Also
--------

.. seealso::

   :ref:`cisco.ise.plugins.module_utils.definitions.authorization_profile <ansible_collections.cisco.ise.plugins.module_utils.definitions.authorization_profile_module>`
      The official documentation on the **cisco.ise.plugins.module_utils.definitions.authorization_profile** module.
   `Authorization Profile reference <https://ciscoisesdk.readthedocs.io/en/latest/api/api.html#v3-0-0-summary>`_
       Complete reference of the Authorization Profile object model.

.. Examples

Examples
--------

.. code-block:: yaml+jinja

    
    - name: Create
      cisco.ise.authorization_profile:
        ise_hostname: "{{ise_hostname}}"
        ise_username: "{{ise_username}}"
        ise_password: "{{ise_password}}"
        ise_verify: "{{ise_verify}}"
        state: present
        accessType: ACCESS_ACCEPT
        acl: aclfilter
        advancedAttributes:
        - leftHandSideDictionaryAttribue:
            AdvancedAttributeValueType: AdvancedDictionaryAttribute
            attributeName: cisco-call-filter
            dictionaryName: Cisco
          rightHandSideAttribueValue:
            AdvancedAttributeValueType: AttributeValue
            value: '23'
        airespaceACL: ACL
        airespaceIPv6ACL: ACL6
        asaVpn: Cisco:cisco-call-type
        authzProfileType: SWITCH
        autoSmartPort: autoSmartPort
        avcProfile: avcProfile
        daclName: PERMIT_ALL_IPV4_TRAFFIC
        description: description
        easywiredSessionCandidate: false
        id: id
        interfaceTemplate: interfaceTemplate
        ipv6ACLFilter: ipv6ACLFilter
        ipv6DaclName: PERMIT_ALL_IPV6_TRAFFIC
        macSecPolicy: MUST_SECURE
        name: name
        neat: false
        profileName: Cisco
        reauth:
          connectivity: RADIUS_REQUEST
          timer: 1800
        serviceTemplate: false
        trackMovement: false
        vlan:
          nameID: vlanName
          tagID: 1
        voiceDomainPermission: false
        webAuth: false
        webRedirection:
          WebRedirectionType: CentralizedWebAuth
          acl: acl
          displayCertificatesRenewalMessages: true
          portalName: Sponsored Guest Portal (default)
          staticIPHostNameFQDN: 10.56.54.200

    - name: Update by id
      cisco.ise.authorization_profile:
        ise_hostname: "{{ise_hostname}}"
        ise_username: "{{ise_username}}"
        ise_password: "{{ise_password}}"
        ise_verify: "{{ise_verify}}"
        state: present
        accessType: ACCESS_ACCEPT
        acl: aclfilter
        advancedAttributes:
        - leftHandSideDictionaryAttribue:
            AdvancedAttributeValueType: AdvancedDictionaryAttribute
            attributeName: cisco-call-filter
            dictionaryName: Cisco
          rightHandSideAttribueValue:
            AdvancedAttributeValueType: AttributeValue
            value: '23'
        airespaceACL: ACL
        airespaceIPv6ACL: ACL6
        asaVpn: Cisco:cisco-call-type
        authzProfileType: SWITCH
        autoSmartPort: autoSmartPort
        avcProfile: avcProfile
        daclName: PERMIT_ALL_IPV4_TRAFFIC
        description: description
        easywiredSessionCandidate: false
        id: id
        interfaceTemplate: interfaceTemplate
        ipv6ACLFilter: ipv6ACLFilter
        ipv6DaclName: PERMIT_ALL_IPV6_TRAFFIC
        macSecPolicy: MUST_SECURE
        name: name
        neat: false
        profileName: Cisco
        reauth:
          connectivity: RADIUS_REQUEST
          timer: 1800
        serviceTemplate: false
        trackMovement: false
        vlan:
          nameID: vlanName
          tagID: 1
        voiceDomainPermission: false
        webAuth: false
        webRedirection:
          WebRedirectionType: CentralizedWebAuth
          acl: acl
          displayCertificatesRenewalMessages: true
          portalName: Sponsored Guest Portal (default)
          staticIPHostNameFQDN: 10.56.54.200

    - name: Delete by id
      cisco.ise.authorization_profile:
        ise_hostname: "{{ise_hostname}}"
        ise_username: "{{ise_username}}"
        ise_password: "{{ise_password}}"
        ise_verify: "{{ise_verify}}"
        state: absent
        id: string





.. Facts


.. Return values

Return Values
-------------
Common return values are documented :ref:`here <common_return_values>`, the following are the fields unique to this module:

.. raw:: html

    <table border=0 cellpadding=0 class="documentation-table">
        <tr>
            <th colspan="1">Key</th>
            <th>Returned</th>
            <th width="100%">Description</th>
        </tr>
                    <tr>
                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="return-ise_response"></div>
                    <b>ise_response</b>
                    <a class="ansibleOptionLink" href="#return-ise_response" title="Permalink to this return value"></a>
                    <div style="font-size: small">
                      <span style="color: purple">dictionary</span>
                                          </div>
                                    </td>
                <td>always</td>
                <td>
                                            <div>A dictionary or list with the response returned by the Cisco ISE Python SDK</div>
                                        <br/>
                                            <div style="font-size: smaller"><b>Sample:</b></div>
                                                <div style="font-size: smaller; color: blue; word-wrap: break-word; word-break: break-all;">{}</div>
                                    </td>
            </tr>
                        </table>
    <br/><br/>

..  Status (Presently only deprecated)


.. Authors

Authors
~~~~~~~

- Rafael Campos (@racampos)



.. Parsing errors

